Add a factored function to have copy and move at the same time. [WIP] On side effects of copy
